# anaconda-workshop-fund-performance

./: .pre-commit-config.yaml  README.md  pyproject.toml  run.sh
.github/workflows/: ci-HnP_Co.yml  ci.yml
db_scripts/: fund-holdings.sql
src/: generate_fund_performance_report.py  generate_price_reconciliation_report.py  load_fund_data.py  setup_database.py
src/configs/: config.yml  constants.py
src/models/: config.py  external_fund.py
src/utils/: utils.py
tests/: models_test.py  setup_database_test.py  test_dummy.py  test_generate_fund_performance_report.py  test_generate_price_reconciliation_report.py  test_load_fund_data.py  test_setup_database.py  utils_test.py
tests/mock_data/: fund_performance_report.csv  price_reconciliation_report.csv
tests/models/: test_external_fund_models.py
tests/utils/: test_utils.py
